# vcamon-app

./: .env.example  .gitignore  01_dashboard.py  02_op_form_updated.py  03_partner_form.py  04_map_sheet.py  05_network_graph.py  06_timeline.py  07_ghosting_analysis_updated.py  08_vca_chart.py  09_quick_ghost.py  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  ghosting_plot.py  pyproject.toml  queries_final.py  queries_updated.py  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/.streamlit/: config.toml  secrets.toml
app/components/: dropdowns.py  sidebar_case_selector.py
app/db/: database.py  models.py  queries.py
app/pages/: 01_dashboard.py  02_op_form.py  03_partner_form.py  04_map_sheet.py  05_network_graph.py  06_timeline.py  07_ghosting_analysis.py  08_vca_chart.py  09_quick_ghost.py
app/utils/: clinical.py  ghosting_plot.py  session_state.py  validators.py
docker/: Dockerfile
requirements/: base.txt
tests/: test_clinical.py  test_clinical.py~  test_db.py  test_validators.py
